# News

./: .env  .env.example  .gitignore  Benutzerhandbuch_ Medizintechnik Newsletter AI.md  Deployment-Anleitung_ Medizintechnik Newsletter AI.md  Kostenanalyse_ Medizintechnik Newsletter AI.md  Medizintechnik Newsletter AI.md  README.md  Test-Ergebnisse_ Medizintechnik Newsletter AI.md  __init__.py  analyzer.py  app.py  base.html  config.py  email_service.py  index.html  main.js  models.py  newsletter_generator.py  pyproject.toml  render.yaml  requirements.txt  routes.py  scheduler.py  scraper.py  style.css  unsubscribe.html
medtech_newsletter/: __init__.py  config.py  email_service.py  extensions.py  extentions.py  models.py  newsletter_generator.py  routes.py  scheduler.py  scraper.py
medtech_newsletter/static/css/: style.css
medtech_newsletter/templates/: admin.html  base.html  edit_profil.html  edit_profile.html  edit_user.html  index.html  login.html  register.html  unsubscribe.html  user_dashboard.html
src/: main.py  scheduler.py
src/fetcher/: __init__.py  manager.py
src/fetcher/plugins/: __init__.py  rss_plugin.py
src/models/: db.py
src/renderer/: __init__.py  email.py
src/sender/: __init__.py  mail.py
templates/: newsletter.html
